--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "array-first-n",
-  "version": "1.0.1",
+  "version": "1.0.22",
   "description": "Get the first N elements of an array which satisfy a given condition. Fast!",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine",
+    "browser": "browserify -s $npm_package_name -o browser.js ."
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,10 @@
   "bugs": {
     "url": "https://github.com/ashubham/array-first-n/issues"
   },
-  "homepage": "https://github.com/ashubham/array-first-n",
   "devDependencies": {
     "jasmine": "^2.3.2"
+  },
+  "dependencies": {
+    "array-slice": "^0.2.3"
   }
 }
